--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^12.18.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.514.0",
+    "motion": "^12.18.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
