--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
+    "editorjs-html": "^4.0.5",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.0",
     "input-otp": "^1.4.2",
