--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+      "postbuild": "next-sitemap"
+
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
@@ -58,6 +60,7 @@
     "lucide-react": "^0.514.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
