--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-resizable-panels": "^3.0.2",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
